# TradeVision

./: .gitignore  README.md  pyproject.toml
scripts/: collect_data.py  collect_news.py  daily_report.py  run_backtest.py  scheduled_runner.py
src/trader/: config.py  db.py
src/trader/analysis/: correlation.py  discovery.py  fundamental.py  sentiment.py  signals.py  technical.py  timeframe.py  volatility.py
src/trader/backtest/: agents.py  data_feeder.py  engine.py
src/trader/data/: bist.py  gold.py  news.py  us_uk.py
src/trader/mcp_server/: server.py
src/trader/reports/: performance.py
src/trader/trading/: alpaca_client.py  executor.py  portfolio.py
tests/: test_analysis.py  test_data_fetchers.py  test_trading.py
